fix: make deploy toolchain and version endpoint build cleanly
- guard sdkman-init source with set +u/-u (it reads unbound $ZSH_VERSION,
  which aborted deploy.sh under `set -Eeuo pipefail`)
- rewrite VersionController to stream the deploy stamp verbatim with a JSON
  content type instead of parsing via Jackson (jackson-databind isn't on the
  compile classpath), keeping the endpoint dependency-free